# CMC-404-Not-Found

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONFIGURATION.md  CONTRIBUTING.md  Dockerfile  IMPROVEMENTS.md  Makefile  README.dev.md  README.md  REPORT.md  SECURITY.md  VISION.md  cubic.yaml  dev-init.sh  docker-compose.override.yml.example  docker-compose.yml  mypy.ini  pyproject.toml  railway.json  run.ps1  supervisord.conf  supervisord.surrealdb.conf
.github/: RELEASE_PROCESS.md  pull_request_template.md
Backend/: .env.example  Dockerfile  Dockerfile.be2  Dockerfile.worker  _diag_extract.py  be2_service.py  boot_be2.py  boot_be3.py  nixpacks.toml  pytest.ini  railway.be2.json  railway.json  railway.worker.json  requirements.txt  test_be1.py
Data/: .env.example  .gitignore  INTEGRATION_NOTES.md  README.md
Frontend/: .dockerignore  nixpacks.toml  package-lock.json  package.json  railway.json
Legal_knowledge_graph/: TEAM_ASSIGNMENT.md  base_core.md
PLANs/: PLAN-v1.md  PLAN-v2.md  PLAN-v3-FINAL.md  PLAN-v4-PRODUCT_VISION.md  SYSTEM_BACKEND.md  SYSTEM_FRONTEND.md  base_core.md  knowledge_base.md
api/: AGENTS.md  auth.py  command_service.py  credentials_service.py  main.py  middleware.py  models.py  podcast_service.py
commands/: __init__.py  embedding_commands.py  podcast_commands.py  source_commands.py
docs/: SECURITY_REVIEW.md  index.md
examples/: README.md  docker-compose-dev.yml  docker-compose-full-local.yml  docker-compose-ollama.yml  docker-compose-single.yml  docker-compose-speaches.yml
frontend/: AGENTS.md  package-lock.json  package.json  vitest.config.ts
open_notebook/: AGENTS.md  config.py
scripts/: check_md_links.py  docker-entrypoint.sh  export_docs.py  wait-for-api.sh
tests/: test_add_insight_failure_propagation.py  test_capabilities_api.py  test_chat_routers_characterization.py  test_chunking.py  test_config_endpoint_no_leak.py  test_connection_test_classification.py  test_context_endpoint_characterization.py  test_cors_credentials.py  test_credential_provider_validation.py  test_credentials_api.py  test_crud_404.py  test_domain.py  test_embedding.py  test_error_message_sanitization.py  test_graphs.py  test_insight_timestamps.py  test_max_body_size_middleware.py  test_model_discovery.py  test_models_api.py  test_note_save_embed_resilience.py  test_order_by_validation.py  test_podcast_audio_containment.py  test_podcast_audio_paths.py  test_podcast_episode_model_resolution.py  test_podcast_job_status_batching.py  test_podcast_legacy_field_removal.py  test_podcast_path.py  test_podcast_speaker_profile.py  test_recently_viewed_api.py  test_repository_config.py  test_search_api.py  test_source_create_array_limits.py  test_source_path_containment.py  test_sources_api.py  test_startup_migration_retry.py  test_transformations_api.py  test_typed_exceptions_reach_handlers.py  test_upload_toctou_race.py  test_upload_type_mitigations.py  test_url_validation.py  (+2 more)
(+525 files in other folders)
